@startuml
' --- 3.1과 동일한 스타일 적용 ---
skinparam class {
    BorderColor #505050
    ArrowColor #505050
    BackgroundColor White
}
skinparam package {
    BackgroundColor #F0F0F0
    BorderColor #505050
}
skinparam shadowing false

' ---------------------------------
' <<T>> = DB 테이블
' ---------------------------------

package "Database Tables" {

    class "User" as USERS <<T>> {
      {key} user_id : int
      --
      username : str {unique}
      email : str {unique}
      password_hash : str
      character_type : str
      birth_date : datetime
      gender : int
      saju_data : String
      created_at : datetime
    }

    class "Post" as POSTS <<T>> {
      {key} post_id : int
      --
      {FK} author_id : int
      title : str
      content : String
      board_type : str
      created_at : datetime
      updated_at : datetime
      view_count : int
      like_count : int
    }
    
    class "Comment" as COMMENTS <<T>> {
      {key} comment_id : int
      --
      {FK} post_id : int
      {FK} author_id : int
      content : String
      anonymous_number : int
      created_at : datetime
      updated_at : datetime
    }
    
    class "PostLike" as POST_LIKES <<T>> {
      {key} like_id : int
      --
      {FK} post_id : int
      {FK} user_id : int
      created_at : datetime
      .. constraints ..
      {unique} (post_id, user_id)
    }
    
    class "CompatibilityRequest" as COMPATIBILITY_REQUESTS <<T>> {
      {key} request_id : int
      --
      {FK} requester_id : int
      {FK} target_id : int
      status : str
      request_message : String
      result_original : float
      result_final : float
      stress : float
      compatibility_result : String
      created_at : datetime
      responded_at : datetime
    }

    class "Friendship" as FRIENDSHIPS <<T>> {
      {key} friendship_id : int
      --
      {FK} requester_id : int
      {FK} addressee_id : int
      status : str
      created_at : datetime
      responded_at : datetime
      .. constraints ..
      {unique} (requester_id, addressee_id)
    }

    class "Celebrity" as CELEBRITIES <<T>> {
      {key} celebrity_id : int
      --
      name : str
      birth_date : datetime
      character_type : str
      saju_data : String
      profile_image_url : str
    }
    
    class "CharacterInfo" as CHARACTER_INFO <<T>> {
        {key} character_type : str
        --
        name : str
        description : String
    }

    class "CompatibilityResult" as COMPATIBILITY_RESULTS <<T>> {
      {key} result_id : int
      --
      type_1 : str
      type_2 : str
      content : String
      score : float
      .. constraints ..
      {unique} (type_1, type_2)
    }
    
    class "Notification" as NOTIFICATIONS <<T>> {
      {key} notification_id : int
      --
      {FK} user_id : int
      type : str
      payload : String
      is_read : bool
      created_at : datetime
    }

    class "Message" as MESSAGES <<T>> {
      {key} message_id : int
      --
      thread_key : str {index}
      {FK} sender_id : int
      {FK} recipient_id : int
      content : String
      is_read : bool
      created_at : datetime
    }
}

' ---------------------------------
' 관계 (Relationships) 정의
' ---------------------------------

' 1:N 명시적 관계
USERS "1" -- "0..*" POSTS : "creates"
POSTS "1" -- "0..*" COMMENTS : "has"
POSTS "1" -- "0..*" POST_LIKES : "has"
USERS "1" -- "0..*" COMPATIBILITY_REQUESTS : "requests"
USERS "1" -- "0..*" FRIENDSHIPS : "requests"
USERS "1" -- "0..*" NOTIFICATIONS : "receives"
USERS "1" -- "0..*" MESSAGES : "sends"

' FK를 통한 암시적 관계 (점선)
POSTS ..> USERS : (FK: author_id)
COMMENTS ..> USERS : (FK: author_id)
COMMENTS ..> POSTS : (FK: post_id)
POST_LIKES ..> POSTS : (FK: post_id)
POST_LIKES ..> USERS : (FK: user_id)
COMPATIBILITY_REQUESTS ..> USERS : (FK: requester_id)
COMPATIBILITY_REQUESTS ..> USERS : (FK: target_id)
FRIENDSHIPS ..> USERS : (FK: requester_id)
FRIENDSHIPS ..> USERS : (FK: addressee_id)
NOTIFICATIONS ..> USERS : (FK: user_id)
MESSAGES ..> USERS : (FK: sender_id)
MESSAGES ..> USERS : (FK: recipient_id)

' 서버 로직을 통해 연결되는 관계
USERS ..> CHARACTER_INFO : (uses)
CELEBRITIES ..> CHARACTER_INFO : (uses)
@enduml

